# C-Example-Conan-CMake

./: CMakeLists.txt  build-docker.ps1  build.sh  conanfile.py  toolchain-clang-linux.cmake
.conan-profile/: clang
.devcontainer/: Dockerfile  devcontainer.json
cmake/: FindCoverageTest.cmake  FindFormat.cmake  FindUtility.cmake
src/: CMakeLists.txt  main.c  main.c.autosave
src/statemachine/obsolete_scxmlcc/: main_sm_adapter.cpp  main_sm_adapter.h
src/statemachine/obsolete_scxmlcc/doc/: main_sm.scxml
src/statemachine/obsolete_scxmlcc/docker/: Dockerfile-SCXMLCC
src/statemachine/uscxml/: uscxml_main_sm.c  uscxml_main_sm.c.autosave  uscxml_main_sm.h
src/statemachine/uscxml/doc/: main_sm.scxml
src/statemachine/uscxml/generator/linux/: Dockerfile
src/utils/: calculator.c  calculator.h
test/: CMakeLists.txt  calculator_test.cpp
